--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
         "rollup-plugin-commonjs": "^10.1.0",
         "rollup-plugin-json": "^4.0.0",
         "rollup-plugin-node-resolve": "^5.2.0",
+        "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-url": "^3.0.1",
         "sass": "^1.55.0",
         "sass-loader": "^8.0.2",
