--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dependencies": {
         "babel-polyfill": "^6.26.0",
         "classnames": "^2.2.5",
-        "fabric": "1.7.3"
+        "fabric": "1.7.3",
+        "rollup-plugin-visualizer": "^5.12.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.8.3",
