--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "main": "dist/index.js",
     "scripts": {
         "i": "PUPPETEER_DOWNLOAD_HOST=https://npm.taobao.org/mirrors SASS_BINARY_SITE=https://npm.taobao.org/mirrors/node-sass npm install",
-        "dev": "./node_modules/.bin/webpack-dev-server ",
+        "dev": "webpack-dev-server ",
         "install:website": "cd website && npm i --registry=https://registry.npmjs.com",
         "build:website": "cd website && rm -rf .umi dist && npm run docs:build",
         "build": "rollup -c"
